[gd_scene load_steps=2 format=2]

[ext_resource path="res://player_guess_main.gd" type="Script" id=1]

[node name="Node" type="Node"]

script = ExtResource( 1 )

[node name="prompt_user" type="TextEdit" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 643.0
margin_top = 91.0
margin_right = 1160.0
margin_bottom = 589.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true

[node name="mode_label" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 465.0
margin_top = 16.0
margin_right = 744.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Welcome to user guess mode"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="arrow_shape_Polygon2D" type="Polygon2D" parent="." index="2"]

position = Vector2( 88.8381, 153.707 )
polygon = PoolVector2Array( -1.43813, 7.47749, -1.43813, 361.556, 372.683, 361.556, 462.873, 197.878, 364.332, 4.13712 )
uv = PoolVector2Array(  )
color = Color( 0.480469, 0.465454, 0.465454, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="user_guess_prompt_label" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 151.0
margin_top = 293.0
margin_right = 449.0
margin_bottom = 376.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "What is your guess?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="user_guess_TextEdit" type="TextEdit" parent="user_guess_prompt_label" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 147.0
margin_top = -10.0
margin_right = 270.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true

[node name="player_guess_Label" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 842.0
margin_top = 35.0
margin_right = 1226.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Player has guessed:                  times"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Player_guesses_updatebox" type="LineEdit" parent="player_guess_Label" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_top = -4.0
margin_right = 190.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
editable = false
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="pc_guess_label" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 93.0
margin_top = 34.0
margin_right = 477.0
margin_bottom = 135.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "PC has guessed:                    times"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pc_guess_updatebox" type="LineEdit" parent="pc_guess_label" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 113.0
margin_top = -4.0
margin_right = 171.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
editable = false
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="Highest_possible_label" type="Label" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 165.0
margin_top = 214.0
margin_right = 402.0
margin_bottom = 258.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Max possible number is"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="highest_possible_lineedit" type="LineEdit" parent="Highest_possible_label" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 172.0
margin_top = -11.0
margin_right = 273.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
editable = false
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Hint", "Rect", "Visibility" ]

[node name="check_Button" type="Button" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 271.0
margin_top = 371.0
margin_right = 341.0
margin_bottom = 415.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Check"
flat = false
align = 1

[node name="higher_lower_prompt_Label" type="Label" parent="check_Button" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -62.0
margin_top = 78.0
margin_right = 122.0
margin_bottom = 135.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="goto_main_Button" type="Button" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 262.0
margin_top = 658.0
margin_right = 322.0
margin_bottom = 678.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Main"
flat = false
align = 1

[node name="goto_pcguess_Button2" type="Button" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 428.0
margin_top = 657.0
margin_right = 515.0
margin_bottom = 677.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "PC GUESS"
flat = false
align = 1

[connection signal="text_changed" from="prompt_user" to="." method="_on_promp_user_text_changed"]

[connection signal="text_changed" from="user_guess_prompt_label/user_guess_TextEdit" to="." method="_on_user_guess_TextEdit_text_changed"]

[connection signal="text_changed" from="player_guess_Label/Player_guesses_updatebox" to="." method="_on_Player_guesses_updatebox_text_changed"]

[connection signal="text_changed" from="pc_guess_label/pc_guess_updatebox" to="." method="_on_pc_guess_updatebox_text_changed"]

[connection signal="text_changed" from="Highest_possible_label/highest_possible_lineedit" to="." method="_on_highest_possible_lineedit_text_changed"]

[connection signal="pressed" from="check_Button" to="." method="_on_check_Button_pressed"]

[connection signal="pressed" from="goto_main_Button" to="." method="_on_goto_main_Button_pressed"]

[connection signal="pressed" from="goto_pcguess_Button2" to="." method="_on_goto_pcguess_Button2_pressed"]


